# machine-learning-lab

./: .gitignore  README.md  convolution_forward.py  docker-compose.yml  flake.nix  forward_back_prop.py
.devcontainer/: devcontainer.json  docker-compose.yml
01_pandas/python_pandas/: car-sales-sanitized.csv
02_numpy/python_numpy/: nut-butter-sales.ipynb
02_numpy/rust_numpy/: Cargo.toml
03_matplotlib/python/: matplotlib.ipynb
04_scikit_learn/python/: random_forest_model_1.pkl  scikit-learn-data.ipynb  scikit-learn-gpu.ipynb  scikit-learn-improving-models.ipynb  scikit-learn-model-evaluation.ipynb  scikit-learn-pipeline-grid.ipynb  scikit-learn-saving-loading-model.ipynb
deeplearningai-deep-learning/03_building_your_deep_neural_network_step_by_step/: testCases_v4a.py  (+1 more)
deeplearningai-machine-learning/: feature-scaling.ipynb  lab_utils_uni.py  learning-rate.ipynb  mlutils.py  multivar-linear-regression.ipynb  singlevar-linear-regression.ipynb
docker/: Dockerfile
forward_back_prop/: activation.py  cost.py  derivatives.py  flake.nix  nn.py
zerotomastery-ai-bootcamp/: README.md  docker-compose.yml
zerotomastery-ai-bootcamp/project_heart_disease/rust/: Cargo.toml
zerotomastery-ai-bootcamp/project_heart_disease/rust/src/: main.rs
zerotomastery-ai-bootcamp/project_heart_disease/rust/src/data/: loader.rs  mod.rs  preprocessing.rs
zerotomastery-ai-bootcamp/project_heart_disease/rust/src/evaluation/: metrics.rs
zerotomastery-ai-bootcamp/project_heart_disease/rust/src/models/: logistic_regression.rs  mod.rs  random_forest.rs
(+64 files in other folders)
