[package]
name = "heart_disease_classifier"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core ML framework
linfa = "0.7.1"
linfa-linear = "0.7.1"    # For Logistic Regression
linfa-trees = "0.7.1"     # For Random Forest
linfa-preprocessing = "0.7.1" # For feature scaling

# Data handling
csv = "1.3.1"
serde = { version = "1.0.226", features = ["derive"] }
ndarray = "0.15.6"         # N-dimensional arrays
ndarray-rand = "0.15.0"   # Random number generation for arrays

# Utilities
rand = "0.9.2"            # Random number generation
anyhow = "1.0.100"          # Error handling
thiserror = "2.0.16"        # Custom error types
